# EPComms

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: publish-poetry-release.yml  pylint.yml
epcomms/: __init__.py
epcomms/base/: instrument.py
epcomms/connection/packet/: __init__.py  ascii.py  bytes.py  cip.py  cip_datatypes.py  packet.py  string.py
epcomms/connection/transmission/: __init__.py  byte_serial.py  ethernet_ip.py  serial.py  socket.py  sockets.py  telnet.py  transmission.py  visa.py
epcomms/controller/: __init__.py
epcomms/controller/base/: controller.py
epcomms/controller/flowcontroller/: flow_controller.py
epcomms/equipment/: __init__.py
epcomms/equipment/analog_discovery/: __init__.py  analog_discovery.py  analog_discovery_DAQ.py  analog_discovery_function_generator.py
epcomms/equipment/base/: __init__.py  instrument.py  scpiinstrument.py
epcomms/equipment/daq/: __init__.py  analog_discovery.py  daq.py  ni_usb_6008.py
epcomms/equipment/flowcontroller/: __init__.py  alicat_eip.py  flow_controller.py
epcomms/equipment/function_generator/: __init__.py  function_generator.py
epcomms/equipment/multimeter/: __init__.py  fluke45.py  keysight_edu34450a.py  multimeter.py  scpi_multimeter.py  tektronix_dmm4050.py
epcomms/equipment/powersupply/: __init__.py  bk1694_esp32.py  hp_6030a.py  keysight_edu36311A.py  keysight_edu36311a.py  power_supply.py
epcomms/equipment/relay/: __init__.py  phidgetrelay.py  relay.py
epcomms/equipment/temperature_sensor/: __init__.py  pico_usb_tc08.py  temperature_sensor.py
epcomms/equipment/test/: __init__.py  test_instrument.py
epcomms/equipment/vacuumcontroller/: __init__.py  inficon_BGP400.py  terranova_962a.py  vacuum_controller.py
examples/: BGP.py  ESP32.py  analog_discovery.py  daq.py  dmm.py  flow_control.py  fluke45.py  hp_6030a.py  keysight_edi36311a.py  keysight_psu.py  psu.py  tektronix_dmm.py  telnet.py  usbtc08.py  vacuum_control.py  wf_sdk_test.py
tests/: __init__.py  test_controller.py
(+9 files in other folders)
