[tool.poetry]
name = "epcomms"
version = "1.0.0"
description = ""
authors = ["Eric Souder <eric@souder.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"
pycomm3 = "^1.2.14"
pyserial = "^3.5"
pyvisa-py = "^0.7.2"
#WF_SDK = "^4.0"
wf-sdk = {git = "git@github.com:Digilent/WaveForms-SDK-Getting-Started-PY"}


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
pytest = "^8.3.2"


#[[tool.poetry.source]]
#name = "WF_SDK"
#url = "https://github.com/Digilent/WaveForms-SDK-Getting-Started-PY#egg=WF_SDK"
#priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
