[tool.poetry]
name = "epcomms"
version = "1.1.0"
description = ""
authors = ["Eric Souder <eric@souder.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"
pycomm3 = "^1.2.14"
pyserial = "^3.5"
pyvisa-py = "^0.7.2"
websockets = "^14.2"
psutil = "^7.0.0"
zeroconf = "^0.145.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
