[tool.poetry]
name = "epcomms"
version = "2.0.0"
description = ""
authors = ["Eric Souder <eric@souder.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"
pycomm3 = "^1.2.14"
pyserial = "^3.5"
pyvisa-py = "^0.7.2"
websockets = "^14.2"
psutil = "^7.0.0"
zeroconf = "^0.145.1"
numpy = "^2.3.4"
pyusb = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
pytest = "^8.3.2"

[tool.pylint.imports]
allow-reexport-from-package = true
disable = ["unnecessary-ellipsis", "import-error", "missing-module-docstring"]

[tool.pylint.type

[tool.pyright]
reportMissingTypeStubs = false
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
